# docs/openapi.yaml
@@ -39,9 +39,6 @@ components:
           type: string
         model:
           type: string
-        userEmail:
-          type: string
-          format: email
         maxTokens:
           type: integer
           exclusiveMinimum: 0
@@ -58,9 +55,6 @@ components:
           type: string
         model:
           type: string
-        userEmail:
-          type: string
-          format: email
         schema:
           type: object
           properties:
@@ -110,9 +104,6 @@ components:
           type: string
         model:
           type: string
-        userEmail:
-          type: string
-          format: email
       required:
         - prompt
     StreamObjectRequest:
@@ -126,9 +117,6 @@ components:
           type: string
         model:
           type: string
-        userEmail:
-          type: string
-          format: email
         schema:
           type: object
           properties:
@@ -459,9 +447,6 @@ paths:
                   type: string
                 model:
                   type: string
-                userEmail:
-                  type: string
-                  format: email
                 maxTokens:
                   type: integer
                   exclusiveMinimum: 0
@@ -577,9 +562,6 @@ paths:
                   type: string
                 model:
                   type: string
-                userEmail:
-                  type: string
-                  format: email
                 schema:
                   type: object
                   properties:
@@ -722,9 +704,6 @@ paths:
                   type: string
                 model:
                   type: string
-                userEmail:
-                  type: string
-                  format: email
               required:
                 - prompt
       responses:
@@ -795,9 +774,6 @@ paths:
                   type: string
                 model:
                   type: string
-                userEmail:
-                  type: string
-                  format: email
                 schema:
                   type: object
                   properties:
